---------------------------------------------------------------------------------------------------
Version: 0.0.31
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.0.30
Date: 2026-01-25
  Features:
    - Added Foundation Catalyst item (required ingredient for foundation crafting)
    - Added Foundation Catalyst recipe: 1 stone -> 1 foundation catalyst
  Changes:
    - Foundation Exhaustion technology now disables Foundation Catalyst recipe instead of Foundation Platform recipe
    - Foundation Platform recipe remains enabled after researching Foundation Exhaustion (allows auto-foundation in blueprints)
    - Players can still use blueprints with foundations after exhaustion, but cannot manually craft new foundations
---------------------------------------------------------------------------------------------------
Version: 0.0.29
Date: 2026-01-18
  Features:
    - Added Lava Centrifuge machine (based on centrifuge, 500kW, 4 module slots)
    - Added Purified Lava fluid (higher quality lava for advanced recipes)
    - Added Lava Purification recipe: 1000 lava -> 500 purified lava
    - Added Concentrated Ore Extraction recipe: 2500 purified lava -> 50 iron + 50 copper ore
    - Added Uranium from Lava recipe: 5000 purified lava + sulfuric acid -> 10 uranium ore
    - Added multi-step Tungsten processing chain (Space Age only):
      - Hot Tungsten Ore item (intermediate)
      - Liquid Tungsten fluid
      - Hot Tungsten Ore from Lava: 10000 purified lava + 500 molten iron + 50 coal -> 40 hot tungsten ore (Centrifuge)
      - Liquid Tungsten from Hot Ore: 10 hot tungsten ore -> 500 liquid tungsten (Centrifuge)
      - Tungsten Plate from Lava: 250 liquid tungsten + 100 molten iron -> 5 tungsten plate (Foundry)
    - Lava Centrifuge technology (requires lava-science-pack + advanced-circuit)
    - Rare Mineral Extraction technology (requires lava-centrifuge + uranium-processing)