@@ -11,7 +11,14 @@
     ],
     "package": {
         "git_publish_branch": "main",
-        "ignore": ["*.bat", "*.ps1", "*.exe", "node_modules/**", "package.json", "package-lock.json"]
+        "ignore": [
+            "*.bat",
+            "*.ps1",
+            "*.exe",
+            "node_modules/**",
+            "package.json",
+            "package-lock.json"
+        ]
     },
     "space_travel_required": true,
     "description": "Start on a tiny island surrounded by lava! Extract all resources from lava using chemical plants. No traditional mining - convert lava into stone, coal, iron, copper & wood. Expand your island only through research-unlocked foundation. Custom map preset, modified tech tree, extreme space constraints create unique survival challenge. Perfect for players seeking fresh Factorio experience!"
