@@ -71,6 +71,9 @@ lava-speed-module-2=Lava Speed Module 2
 lava-speed-module-3=Lava Speed Module 3
 lava-flying-robot-frame=Lava Flying Robot Frame
 foundation-platform-disable=Foundation Exhaustion
+xp-lab=XP Lab
+crafting-mastery=Crafting Mastery
+smelting-mastery=Smelting Mastery
 [technology-description]
 foundation-platform-disable=The foundation crafting method has been exhausted. You must find alternative ways to expand your island.
 lava-block-add-landfill=Gives more landfill. 500 per science tier by default.
@@ -82,6 +85,9 @@ lava-speed-module=Craft speed modules using lava instead of standard materials.
 lava-speed-module-2=Craft speed modules 2 using lava instead of standard materials.
 lava-speed-module-3=Craft speed modules 3 using lava instead of standard materials.
 lava-flying-robot-frame=Craft flying robot frames using lava instead of steel plates.
+xp-lab=Unlocks the XP Lab for quest-based research using XP Science Packs.
+crafting-mastery=Master the art of crafting for increased productivity.
+smelting-mastery=Perfect your smelting techniques for better yields.
 
 [item-name]
 uranium-bacteria=Uranium Bacteria
@@ -95,16 +101,21 @@ geo-thermal-turbine=Geo Thermal Turbine
 lava-cooling-with-liquid-nitrogen=Lava Cooling with Liquid Nitrogen
 lava-science-pack=Lava Science Pack
 lava-mech-armor=Lava Mech Armor
+xp-science-pack=XP Science Pack
+xp-lab=XP Lab
 
 [item-description]
 uranium-bacteria=Bacteria that metabolizes bioflux into uranium ore. Spoils into uranium ore.
 lava-mech-armor=A basic mech armor with minimal protection. Perfect for surviving the harsh lava environment.
+xp-science-pack=Crystallized experience from crafting. Used in the XP Lab.
+xp-lab=A specialized lab that only accepts XP Science Packs for quest research.
 [entity-name]
 lava-centrifuge=Lava Centrifuge
 air-cooler=Air Cooler
 geo-thermal-turbine=Geo Thermal Turbine
 air-compressor=Air Compressor
 industrialised-chemical-plant=Industrialised Chemical Plant
+xp-lab=XP Lab
 [fluid-name]
 purified-lava=Purified Lava
 liquid-nitrogen=Liquid Nitrogen
@@ -166,3 +177,4 @@ sulfur-fulgora=Sulfur (Fulgora)
 sulfur-aquilo=Sulfur (Aquilo)
 sulfur-vulcanus=Sulfur (Vulcanus)
 explosives-from-lava=Explosives (Lava)
+xp-lab=XP Lab
