@@ -1,0 +1,15 @@
+return {
+    type = "item",
+    name = "xp-lab",
+    icons = {
+        {
+            icon = "__base__/graphics/icons/lab.png",
+            icon_size = 64,
+            tint = { r = 0.7, g = 0.3, b = 1.0, a = 1 }
+        }
+    },
+    subgroup = "production-machine",
+    order = "g[lab]-b[xp-lab]",
+    place_result = "xp-lab",
+    stack_size = 10,
+}
