@@ -1,0 +1,15 @@
+return {
+    type = "recipe",
+    name = "xp-lab",
+    enabled = false,
+    energy_required = 5,
+    ingredients = {
+        { type = "item", name = "lab", amount = 1 },
+        { type = "item", name = "electronic-circuit", amount = 10 },
+        { type = "item", name = "iron-gear-wheel", amount = 10 },
+    },
+    results = {
+        { type = "item", name = "xp-lab", amount = 1 },
+    },
+    category = "crafting",
+}
