@@ -1,6 +1,7 @@
 data:extend(
     {
         require("prototypes.tools.lava-science-pack"),
-        require("prototypes.tools.enchanted-science-pack")
+        require("prototypes.tools.enchanted-science-pack"),
+        require("prototypes.tools.xp-science-pack"),
     }
 )
